# FYP-Stage-2

./: .gitignore  CODEBASE_SPEC.md  CONFIG_STANDARDIZATION.md  EDA.ipynb  EXPERIMENT_ARCHIVAL_PLAN.md  Loss Function Engineering.md  README.md  cleanup_experiments.sh  generate_notebook.py  nohup.out  pyproject.toml  run_exp5_queue.sh  run_experiments_5.sh  stress_test_forward_model.ipynb  task.md
Old_Experiments/: README.md
configs/: data.yaml  debug_training.yaml  model.yaml  model_resnet18.yaml  training.yaml  training_physics.yaml  training_resnet18.yaml
experiments/: System_Prosecution_Report.md
notebooks/: 3_param_inference.ipynb  5_param_inference.ipynb  EDA.ipynb  phase_map_demo.ipynb
reports/: experiment9_refinement_research.md  rl_refinement_research.md
scripts/: compare_experiments.py  compute_sensitivity.py  continue_refinement.sh  debug_notify.sh  demo_noise_pipeline.py  evaluate.py  evaluate_json.py  generate_noise_configs.py  heatmap_diagnostic.py  invert.py  monitor_visualizations.sh  notify.py  organize_experiment.py  plot_loss.py  plot_residuals.py  queue_experiments.sh  queue_experiments_S.sh  queue_experiments_S_v2.sh  queue_experiments_v2.sh  queue_experiments_v3.sh  queue_experiments_v4.sh  queue_experiments_v5.sh  queue_experiments_v6.sh  queue_noise_experiments.sh  queue_noise_experiments_part2.sh  rank_models.py  refine_de.py  refine_de_gpu.py  refine_rl.py  run_S09.sh  run_advanced_research.sh  run_all_tests.sh  run_experiments_nohup.sh  run_final_experiments.sh  run_pure_regression_suite.sh  run_refiner_experiments.sh  run_sequence_v2.sh  (+12 more)
(+271 files in other folders)
